# ionpak

firmware/: Cargo.toml  build1.bat
firmware/ionpak-firmware/: Cargo.toml  Xargo.toml  build1.bat  build2.bat
firmware/ionpak-firmware/src/: board.rs  ethmac.rs  main.rs  version.ascii
firmware/src/: board.rs  main.rs  version.ascii
